# rabi

./: Cargo.toml  README.md
config/: rabi.ini
src/: config.rs  editor.rs  lib.rs  main.rs  row.rs  syntax.rs  unix.rs  windows.rs
