[package]
name = "rabi"
version = "0.1.0"
edition = "2021"
authors = ["MizukiCry"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-width = "0.1.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", default-features = false, features = ["wincon"] }
winapi-util = "0.1.6"

# [target.'cfg(unix)'.dependencies]
libc = "0.2.149"
